docs: remove stale --enable-preview from README run command
Co-authored-by: ktruchcz <262602283+ktruchcz@users.noreply.github.com>